# memoryfs

./: .gitattributes  .gitignore  .gitleaksignore  .markdownlint.yaml  .pre-commit-config.yaml  .spectral.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  README.ru.md  SECURITY.md  audit.toml  build.rs
.github/: secret_scanning.yml
.github/workflows/: ci.yml
bench/markdownfs_scale/: bench_scale.rs
bench/results/: 0.1.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/prompts/extraction/: v1.md
crates/core/src/: api.rs  audit.rs  backup.rs  embedder.rs  entity_extraction.rs  event_log.rs  extraction.rs  graph.rs  ids.rs  inbox.rs  indexer.rs  levara.rs  mcp.rs  mcp_instructions.md  memory_policy.rs  policy.rs  reindex.rs  retrieval.rs  runs.rs  storage.rs  supersede.rs
docs/: architecture.md  architecture.ru.md  getting-started.md  install.md  install.ru.md  operations.md  security.md  testing.md  testing.ru.md
docs/components/: acl.md  audit.md  commit.md  indexing.md  mcp.md  retrieval.md  storage.md
docs/integrations/: claude-code.md  embedding.md  levara.md  levara.ru.md  llm.md  mcp.md  rest-api.md
docs/planning/: 00-analysis.md  01-architecture.md  02-data-model.md  03-api-specification.md  04-tasks-dod.md  05-corner-cases.md  06-testing-strategy.md  07-roadmap.md  08-adrs.md  threat-model.md
eval/e2e/: gen_dataset.py  ground_truth.json  run_e2e.py
eval/extraction/: README.md  baseline.json  dataset.jsonl  generate_dataset.py  run.py
eval/retrieval/: README.md  baseline.json  corpus.jsonl  dataset.jsonl  generate_dataset.py  run.py
examples/: claude-code-mcp.json  policy.local.yaml
fixtures/: README.md
fixtures/killer-demo-with-conflict/: README.md
fixtures/killer-demo-with-conflict/.memoryfs/: policy.yaml
fixtures/killer-demo-with-conflict/conversations/2026/05/15/: conv_01HZM5K0M2N4P6Q8R0S2T4V6X8.md
fixtures/killer-demo-with-conflict/expected/: supersede_invariants.yaml
fixtures/killer-demo-with-conflict/inbox/proposals/: prp_01HZM5R5S7T9V1W3X5Y7Z9A1B3.md
fixtures/killer-demo-with-conflict/memory/users/alice/: ide-preference-current.md  ide-preference.md
fixtures/killer-demo-with-conflict/runs/run_01HZM5N4P6Q8R0S2T4V6X8Z0B2/: index.md  prompt.md  result.md  tool_calls.jsonl
fixtures/killer-demo/.memoryfs/: policy.yaml
fixtures/killer-demo/conversations/2026/04/30/: conv_01HZK4M2A5B8C0D2E5F8G1H4J7.md
fixtures/killer-demo/decisions/: 0001-vector-store-choice.md
fixtures/killer-demo/entities/people/: alice.md
fixtures/killer-demo/entities/projects/: memoryfs.md
fixtures/killer-demo/expected/: acl_matrix.json  retrieval_queries.yaml
fixtures/killer-demo/inbox/proposals/: prp_01HZK4M8X1Y2Z3A4B5C6D7E8F9.md
fixtures/killer-demo/memory/agents/coder/: preferences.md
fixtures/killer-demo/memory/projects/memoryfs/: vector-store-choice.md
fixtures/killer-demo/memory/users/alice/: profile.md
fixtures/killer-demo/runs/run_01HZK4M5J8K1M4N7P0Q3R6S9T2/: index.md  memory_patch.md  prompt.md  result.md  tool_calls.jsonl
proto/: levara.proto
scripts/: .env.example  README.md  bootstrap.sh  check_api_drift.py  crosscheck_data_model.py  dev-setup.sh  docker-compose.dev.yml  env-check.sh  test_schema_violations.py  validate_fixtures.py  validate_schemas.py
specs/: DRIFT-REPORT.md  README.md  mcp.tools.json  openapi.yaml
specs/schemas/v1/: base.schema.json  conversation.schema.json  decision.schema.json  entity.schema.json  event.schema.json  memory.schema.json  policy.schema.json  proposal.schema.json  run.schema.json
src/: acl.rs  backup.rs  bm25.rs  chaos.rs  chunker.rs  commit.rs  error.rs  extraction_worker.rs  graph.rs  ids.rs  indexer.rs  lib.rs  llm.rs  main.rs  mcp.rs  memory_policy.rs  migration.rs  observability.rs  post_scan.rs  redaction.rs  schema.rs  storage.rs  supersede.rs  vector_store.rs
tests/adversarial/: README.md
tests/adversarial/injection-suite/: README.md  scenarios.yaml
tests/adversarial/schema-violations/: violations.jsonl
tests/adversarial/secrets-suite/: README.md  corpora.jsonl
workers/extractor/: pyproject.toml
workers/extractor/src/memoryfs_extractor/: __init__.py  cli.py
