[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memoryfs-extractor"
version = "0.1.0"
description = "MemoryFS LLM extraction worker — pulls memories from conversations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "MemoryFS contributors" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "anyio>=4.4",
    "structlog>=24.1",
    "jsonschema>=4.22",
    "referencing>=0.35",
    "pyyaml>=6.0",
    "anthropic>=0.34",
    "openai>=1.40",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pyright>=1.1",
    "mypy>=1.10",
]

[project.scripts]
memoryfs-extractor = "memoryfs_extractor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memoryfs_extractor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pyflakes/pycodestyle
    "I",              # isort
    "UP",             # pyupgrade
    "B",              # bugbear
    "ASYNC",          # async checks
    "S",              # security (bandit-like)
]
ignore = ["S101"]  # asserts in tests are fine

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
